--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Git Remote 2</title>
   </head>
   <body>
-    <h3>test..</h3>
+    <h3>New Git Remote</h3>
+
+    <p>Belajar git remote kasus ke 2</p>
+    <p>membuat file di lokal komputer lalu di push ke github</p>
   </body>
 </html>
